//
//  ValueDefault.swift
//  Common
//
//  Created by Anderson F Carvalho on 21/07/23.
//

import Foundation

public enum ValueDefault {
    // Accessibility
    public static var movieListInTheaterList = "movieList_InTheaterList"
    public static var movieListMovieList = "movieList_MovieList"
    public static var movieListView = "movieList_view"
    public static var carouselList = "carousel_list"
    public static var movideDetailView = "movieDetail_view"
    public static var searchBarView = "searchBar_view"
    public static var searchView = "search_View"
    public static var headView = "head_view"
    public static var logoImage = "logo_Image"
    public static var logoImageHidden = "logo_Image_hidden"
    public static var toggleDarkMode = "toggle_DarkMode"
    public static var themeDarkMode = "theme_DarkMode"
    public static var themeLightMode = "theme_LightMode"
    public static var movieListEmpty = "movieList_empty"
    public static var topMovieTitle = "topMovie_Title"
    public static var movieInTheaterTitle = "movieInTheater_Title"
    
    // JSONS
    public static var movieDetailDataErrorJSON = "movieDetailDataError"
    public static var movieListJSON = "movieList"
    public static var movieListDebugJSON = "movieListDebug"
    public static var movieListDataErrorJSON = "movieListDataError"
    
    // Tests Enviroment
    public static var enviromentJsonURL = "JSON-URL"
    public static var argumentsUITesting = "UI-TESTING"
    public static var themeColorTest = "THEME-COLOR-TESTING"
    
    // Theme color
    public static var dark = "dark"
    public static var light = "light"
}
