...
                    .padding()                    
                    .frame(maxWidth:  UIScreen.screenWidth, maxHeight: 600)
                    
                    
            }.frame(width:  UIScreen.screenWidth, height: UIScreen.screenHeight)
        }.alert(isPresented: $input.displayAlert) {
            Alert(title: Text("Movie not found!"),
                  dismissButton: Alert.Button.default(Text("OK"),
                                                      action: {
                output.value.send(.dismiss)
            }))
        }.accessibilityIdentifier(ValueDefault.movideDetailView)
            .background(ColorName.backgroundTransparent.color.opacity(0.5))
    }
...
